<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bazzu.bazzusportsandtips.MainActivity">
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/policy"
        android:title="@string/policyb"
        />

    <item
        android:id="@+id/rate"
        android:title="@string/menu_Ratingbazu" />

    <item
        android:id="@+id/feedback"
        android:title="@string/menu_feedbackbazu" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/abtback"
        android:title="@string/aboutbazu" />
    <item
        android:title="@string/cright"
        android:id="@+id/copyright"
        />

</menu>